Fixing sonarlint issues. Adding abstract ai service that has chat history. Adding local/remote components for consuming GPT-like APIs